@@ -59,6 +59,6 @@ public class Setup
         "_ast:org.python.antlr.ast.AstModule",
         "_marshal",
         "_threading:org.python.modules._threading._threading",
-        "_" + PosixModule.getOSName() + ":org.python.modules.posix.PosixModule"
+        PosixModule.getOSName() + ":org.python.modules.posix.PosixModule"
     };
 }
